EXOJCR-756: set policy