@@ -374,7 +374,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <argLine>-Djava.security.manager -Djava.security.policy=${project.build.directory}/test-classes/test.policy</argLine>
+               <argLine>${env.MAVEN_OPTS}</argLine>
                <systemProperties>
                   <property>
                      <name>jcr.test.configuration.file</name>
@@ -544,7 +544,7 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <configuration>
-                     <!-- TAKE CARE TO UPDATE ALSO run-all PROFILE -->
+                  <!-- TAKE CARE TO UPDATE ALSO run-all PROFILE -->
                      <argLine>${env.MAVEN_OPTS}</argLine>
                      <systemProperties>
                         <property>
